[package]
name = "fly"
version = "0.1.0"
edition = "2021"
authors = ["udit kumar <yudistrange@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4.17"
log4rs = "1.2.0"
